force-app/main/default/objects/Account/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <description>MDM 고객계정그룹</description>
    <label>AccountGroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z100</fullName>
                <label>CJ FW금융 고객</label>
            </value>
            <value>
                <fullName>Z200</fullName>
                <label>CJ FW일반 고객</label>
            </value>
            <value>
                <fullName>Z300</fullName>
                <label>일반고객(판매처)</label>
            </value>
            <value>
                <fullName>Z400</fullName>
                <label>관리처</label>
            </value>
            <value>
                <fullName>Z900</fullName>
                <label>CJ FW일회성 고객</label>
            </value>
            <value>
                <fullName>Z910</fullName>
                <label>경영계획부서고객</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>