force-app/main/default/objects/Account/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Lot Number Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>