force-app/main/default/objects/Account/fields/addressDetailCheckBox__c.field-meta.xml
<CustomField>
    <fullName>addressDetailCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>상세 주소 필수 여부</label>
    <type>Checkbox</type>
</CustomField>