force-app/main/default/objects/Account/fields/AddressDetails2__c.field-meta.xml
<CustomField>
    <fullName>AddressDetails2__c</fullName>
    <label>Lot Number Address Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>