force-app/main/default/objects/Account/fields/apvPermYmd__c.field-meta.xml
<CustomField>
    <fullName>apvPermYmd__c</fullName>
    <label>apvPermYmd</label>
    <type>Date</type>
</CustomField>