force-app/main/default/objects/Account/fields/AuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationDate__c</fullName>
    <label>Authorization Date</label>
    <type>Date</type>
</CustomField>