force-app/main/default/objects/Account/fields/AuthorizedCapacity__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedCapacity__c</fullName>
    <label>Authorized Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>