force-app/main/default/objects/Account/fields/bdngOwnSeNm__c.field-meta.xml
<CustomField>
    <fullName>bdngOwnSeNm__c</fullName>
    <label>bdngOwnSeNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>