force-app/main/default/objects/Account/fields/BidNoticeCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeCompanyCode__c</fullName>
    <description>Lead의 Bid Notice Company Code가 Converted 될 때 Mapping되는 field</description>
    <label>Bid Notice Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>