force-app/main/default/objects/Account/fields/brf_mlcnt__c.field-meta.xml
<CustomField>
    <fullName>brf_mlcnt__c</fullName>
    <label>brf_mlcnt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>