force-app/main/default/objects/Account/fields/BusinessCategory__c.field-meta.xml
<CustomField>
    <fullName>BusinessCategory__c</fullName>
    <label>Business Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>