force-app/main/default/objects/Account/fields/BusinessConditions__c.field-meta.xml
<CustomField>
    <fullName>BusinessConditions__c</fullName>
    <label>Business Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>