force-app/main/default/objects/Account/fields/BusinessPath__c.field-meta.xml
<CustomField>
    <fullName>BusinessPath__c</fullName>
    <label>Business Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessPath</valueSetName>
    </valueSet>
</CustomField>