force-app/main/default/objects/Account/fields/BusinessPathLv1__c.field-meta.xml
<CustomField>
    <fullName>BusinessPathLv1__c</fullName>
    <label>BusinessPathLv1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Large_BusinessPath</valueSetName>
    </valueSet>
</CustomField>