force-app/main/default/objects/Account/fields/BusinessPathLv2__c.field-meta.xml
<CustomField>
    <fullName>BusinessPathLv2__c</fullName>
    <label>BusinessPathLv2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessPathLv1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Medium_BusinessPath</valueSetName>
    </valueSet>
</CustomField>