force-app/main/default/objects/Account/fields/BusinessPathLv3__c.field-meta.xml
<CustomField>
    <fullName>BusinessPathLv3__c</fullName>
    <label>BusinessPathLv3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessPathLv2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Small_BusinessPath</valueSetName>
    </valueSet>
</CustomField>