force-app/main/default/objects/Account/fields/BusinessPlaceKeyInfo__c.field-meta.xml
<CustomField>
    <fullName>BusinessPlaceKeyInfo__c</fullName>
    <label>BusinessPlaceKeyInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>