force-app/main/default/objects/Account/fields/CaptialSales__c.field-meta.xml
<CustomField>
    <fullName>CaptialSales__c</fullName>
    <label>Captial Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>