force-app/main/default/objects/Account/fields/Captive__c.field-meta.xml
<CustomField>
    <fullName>Captive__c</fullName>
    <label>Captive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Captive</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non-Captive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>