force-app/main/default/objects/Account/fields/CashManagementGroup__c.field-meta.xml
<CustomField>
    <fullName>CashManagementGroup__c</fullName>
    <label>CashManagementGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
                <label>거래처코드공통</label>
            </value>
            <value>
                <fullName>V1</fullName>
                <label>협력사공통</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>