force-app/main/default/objects/Account/fields/CommissionPaymentPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>CommissionPaymentPlaceCode__c</fullName>
    <label>CommissionPaymentPlaceCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>