force-app/main/default/objects/Account/fields/CompanyRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegisterNumber__c</fullName>
    <description>기업의 사업자 등록번호</description>
    <label>Company Register Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>