force-app/main/default/objects/Account/fields/ContractExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpireDate__c</fullName>
    <label>Contract Expire Date</label>
    <type>Date</type>
</CustomField>