force-app/main/default/objects/Account/fields/ContractRocationDate__c.field-meta.xml
<CustomField>
    <fullName>ContractRocationDate__c</fullName>
    <description>MDM 약정회전일</description>
    <label>ContractRocationDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>