force-app/main/default/objects/Account/fields/CorporateCode__c.field-meta.xml
<CustomField>
    <fullName>CorporateCode__c</fullName>
    <description>MDM 법인코드</description>
    <label>CorporateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>