force-app/main/default/objects/Account/fields/CreditManagement__c.field-meta.xml
<CustomField>
    <fullName>CreditManagement__c</fullName>
    <label>CreditManagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>본점 여신관리</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>개별 여신관리</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>여신관리 안함</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>