force-app/main/default/objects/Account/fields/CreditManagementCode__c.field-meta.xml
<CustomField>
    <fullName>CreditManagementCode__c</fullName>
    <description>MDM 여신관리(고객향)코드</description>
    <label>CreditManagementCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>