force-app/main/default/objects/Account/fields/crt_wrt_cycl_bd__c.field-meta.xml
<CustomField>
    <fullName>crt_wrt_cycl_bd__c</fullName>
    <label>crt_wrt_cycl_bd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>