force-app/main/default/objects/Account/fields/custID__c.field-meta.xml
<CustomField>
    <fullName>custID__c</fullName>
    <externalId>true</externalId>
    <label>고객ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>