force-app/main/default/objects/Account/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <description>MDM 고객ID</description>
    <externalId>true</externalId>
    <label>CustomerID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>