force-app/main/default/objects/Account/fields/CustomerIDASIS__c.field-meta.xml
<CustomField>
    <fullName>CustomerIDASIS__c</fullName>
    <description>MDM 구코드(As-Is)</description>
    <label>CustomerIDASIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>