force-app/main/default/objects/Account/fields/CustomerOrderDeadlineType__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderDeadlineType__c</fullName>
    <label>CustomerOrderDeadlineType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>유통KX</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>유통</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>급식</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>제주 FS</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>제주 급식</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>아라마크</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>FS</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>키즈</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>제주키즈</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>급식직거래(군납)</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>외식일반/실수요</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>광역 외식일반/실수요</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>제주 외식일반</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>푸드빌컨세션</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>푸드빌컨세션2</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>FO물류대행</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>광역 외식TC</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>푸드빌 구매통합</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>외부창고/FO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>