force-app/main/default/objects/Account/fields/CustomerPath__c.field-meta.xml
<CustomField>
    <fullName>CustomerPath__c</fullName>
    <label>CustomerPath</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3000</fullName>
                <label>FO(영업)</label>
            </value>
            <value>
                <fullName>3100</fullName>
                <label>FO(축육)</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>유통(유통점)</label>
            </value>
            <value>
                <fullName>4100</fullName>
                <label>유통(급식점)</label>
            </value>
            <value>
                <fullName>4200</fullName>
                <label>유통(대리점)</label>
            </value>
            <value>
                <fullName>4300</fullName>
                <label>유통(전문점)</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>키즈(전문점)</label>
            </value>
            <value>
                <fullName>5001</fullName>
                <label>키즈(직거래)</label>
            </value>
            <value>
                <fullName>6000</fullName>
                <label>FC</label>
            </value>
            <value>
                <fullName>6100</fullName>
                <label>RS</label>
            </value>
            <value>
                <fullName>6200</fullName>
                <label>플랫폼</label>
            </value>
            <value>
                <fullName>7000</fullName>
                <label>전략(원료)</label>
            </value>
            <value>
                <fullName>7001</fullName>
                <label>전략(뉴채널)</label>
            </value>
            <value>
                <fullName>7002</fullName>
                <label>선물세트특판</label>
            </value>
            <value>
                <fullName>7100</fullName>
                <label>그룹시너지</label>
            </value>
            <value>
                <fullName>7101</fullName>
                <label>그룹시너지(제당)</label>
            </value>
            <value>
                <fullName>7102</fullName>
                <label>그룹시너지(푸드빌)</label>
            </value>
            <value>
                <fullName>7103</fullName>
                <label>그룹시너지(대한통운)</label>
            </value>
            <value>
                <fullName>7104</fullName>
                <label>그룹시너지(송림푸드)</label>
            </value>
            <value>
                <fullName>7105</fullName>
                <label>농산(원물공급)</label>
            </value>
            <value>
                <fullName>8000</fullName>
                <label>급식직거래(직영)</label>
            </value>
            <value>
                <fullName>8001</fullName>
                <label>급식직거래(병원)</label>
            </value>
            <value>
                <fullName>8002</fullName>
                <label>급식직거래(캐터링)</label>
            </value>
            <value>
                <fullName>8003</fullName>
                <label>급식직거래(실버)</label>
            </value>
            <value>
                <fullName>8004</fullName>
                <label>중부센트럴키친</label>
            </value>
            <value>
                <fullName>8005</fullName>
                <label>급식직거래(신경로)</label>
            </value>
            <value>
                <fullName>8006</fullName>
                <label>급식직거래(군)</label>
            </value>
            <value>
                <fullName>8007</fullName>
                <label>헬씨누리(복지시설)</label>
            </value>
            <value>
                <fullName>8008</fullName>
                <label>헬씨누리(요양원)</label>
            </value>
            <value>
                <fullName>8009</fullName>
                <label>헬씨누리(요양병원)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>