force-app/main/default/objects/Account/fields/CustomerPathFromDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerPathFromDate__c</fullName>
    <label>CustomerPathFromDate</label>
    <type>Date</type>
</CustomField>