force-app/main/default/objects/Account/fields/CustomerRoute__c.field-meta.xml
<CustomField>
    <fullName>CustomerRoute__c</fullName>
    <label>CustomerRoute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3101-001</fullName>
                <label>외식대리점_상온_상온</label>
            </value>
            <value>
                <fullName>3102-001</fullName>
                <label>외식대리점_저온_저온</label>
            </value>
            <value>
                <fullName>3103-001</fullName>
                <label>외식대리점_해피스푼_해피스푼</label>
            </value>
            <value>
                <fullName>3104-001</fullName>
                <label>외식유통점_식당점_한분식</label>
            </value>
            <value>
                <fullName>3105-001</fullName>
                <label>외식유통점_식당점_중식</label>
            </value>
            <value>
                <fullName>3106-001</fullName>
                <label>외식유통점_식당점_양식</label>
            </value>
            <value>
                <fullName>3107-001</fullName>
                <label>외식유통점_식당점_일식</label>
            </value>
            <value>
                <fullName>3108-001</fullName>
                <label>외식유통점_식자재마트_기업형</label>
            </value>
            <value>
                <fullName>3109-001</fullName>
                <label>외식유통점_식자재마트_개별형</label>
            </value>
            <value>
                <fullName>3110-001</fullName>
                <label>외식직거래_FC_FC)레스토랑</label>
            </value>
            <value>
                <fullName>3111-001</fullName>
                <label>외식직거래_FC_FC)카페</label>
            </value>
            <value>
                <fullName>3112-001</fullName>
                <label>외식직거래_FC_FC)주점</label>
            </value>
            <value>
                <fullName>3113-001</fullName>
                <label>외식직거래_RS_RS)한식</label>
            </value>
            <value>
                <fullName>3114-001</fullName>
                <label>외식직거래_RS_RS)아시안</label>
            </value>
            <value>
                <fullName>3115-001</fullName>
                <label>외식직거래_RS_RS)외식기타Ⅰ</label>
            </value>
            <value>
                <fullName>3116-001</fullName>
                <label>외식직거래_RS_RS)양식</label>
            </value>
            <value>
                <fullName>3117-001</fullName>
                <label>외식직거래_RS_RS)웨딩부페&amp;호텔</label>
            </value>
            <value>
                <fullName>3118-001</fullName>
                <label>외식직거래_RS_RS)외식기타Ⅱ</label>
            </value>
            <value>
                <fullName>3119-001</fullName>
                <label>FO_도매_대도매</label>
            </value>
            <value>
                <fullName>3120-001</fullName>
                <label>FO_도매_중도매</label>
            </value>
            <value>
                <fullName>3121-001</fullName>
                <label>FO_도매_중도매/협력점</label>
            </value>
            <value>
                <fullName>3122-001</fullName>
                <label>FO_소사장_차량사업자</label>
            </value>
            <value>
                <fullName>3123-001</fullName>
                <label>FO_직영_식당</label>
            </value>
            <value>
                <fullName>3124-001</fullName>
                <label>FO_직영_웨딩뷔페</label>
            </value>
            <value>
                <fullName>3125-001</fullName>
                <label>FO_직영_체인</label>
            </value>
            <value>
                <fullName>3126-001</fullName>
                <label>FO_소매_현매</label>
            </value>
            <value>
                <fullName>3127-001</fullName>
                <label>FO_기타_실수요</label>
            </value>
            <value>
                <fullName>3128-001</fullName>
                <label>FO_기타_기타</label>
            </value>
            <value>
                <fullName>3129-001</fullName>
                <label>FO_기타_직원</label>
            </value>
            <value>
                <fullName>3130-001</fullName>
                <label>FO_법인_법인</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>