force-app/main/default/objects/Account/fields/CustomerRouteFromDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerRouteFromDate__c</fullName>
    <label>CustomerRouteFromDate</label>
    <type>Date</type>
</CustomField>