force-app/main/default/objects/Account/fields/CustomerStatusCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatusCode__c</fullName>
    <description>MDM 고객상태코드</description>
    <label>CustomerStatusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>