force-app/main/default/objects/Account/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>CustomerType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C01</fullName>
                <label>본점</label>
            </value>
            <value>
                <fullName>C02</fullName>
                <label>판매처</label>
            </value>
            <value>
                <fullName>C03</fullName>
                <label>관리처-배송</label>
            </value>
            <value>
                <fullName>C04</fullName>
                <label>관리처-분할</label>
            </value>
            <value>
                <fullName>C05</fullName>
                <label>점포</label>
            </value>
            <value>
                <fullName>C06</fullName>
                <label>사이트</label>
            </value>
            <value>
                <fullName>C07</fullName>
                <label>단체급식고객</label>
            </value>
            <value>
                <fullName>C08</fullName>
                <label>회계고객</label>
            </value>
            <value>
                <fullName>C09</fullName>
                <label>물류센터</label>
            </value>
            <value>
                <fullName>C10</fullName>
                <label>해외고객</label>
            </value>
            <value>
                <fullName>C11</fullName>
                <label>관리처-2차</label>
            </value>
            <value>
                <fullName>C12</fullName>
                <label>금융고객</label>
            </value>
            <value>
                <fullName>C13</fullName>
                <label>자가소비부서</label>
            </value>
            <value>
                <fullName>C14</fullName>
                <label>경영계획부서</label>
            </value>
            <value>
                <fullName>C16</fullName>
                <label>해외고객-분할</label>
            </value>
            <value>
                <fullName>C17</fullName>
                <label>해외고객-배송</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>