force-app/main/default/objects/Account/fields/din_mlcnt__c.field-meta.xml
<CustomField>
    <fullName>din_mlcnt__c</fullName>
    <label>din_mlcnt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>